--- a/article/LoTuX_CTF_Writeup/20240718_213012/index.html
+++ b/article/LoTuX_CTF_Writeup/20240718_213012/index.html
@@ -111,7 +111,7 @@
                 <img src="img04.png" title="第一段 flag" alt="第一段 flag">
             </picture>
             <p class="zhw">
-                除了第一段 flag，在 <code>script</code> 元素的部分還看到有個函式 magic，會檢查變數 isAdmin 是否為 true，如果是則跳轉到 flag.html，否則會跳轉回 index.html。我們就直接在網址列輸入網址前往該頁面，便可發現第三段 flag。
+                除了第一段 flag，在 <code>script</code> 元素的部分還看到有個函式 magic，會檢查變數 isAdmin 是否為 true，如果是則跳轉到 flag.html，否則會跳轉回 index.html。我們就直接在網址列輸入網址前往 flag 頁面，便可發現第三段 flag。
             </p>
             <picture>
                 <img src="img05.png" title="第三段 flag" alt="第三段 flag">
